--- a/Part3/Makefile
+++ b/Part3/Makefile
@@ -2,7 +2,7 @@ obj-y :=test_call.o
 obj-m :=syscallModule.o
 
 PWD := $(shell pwd)
-KDIR := /lib/modules/`uname-r`/build
+KDIR := /lib/modules/$(shell uname-r)/build
 
 default:
 	$(MAKE) -C $(KDIR) SUBDIRS= $(PWD) modules
